--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body
 {
     display: inline-block;
     width: 100%;
-}
+} 
 .bars
 {
     color: black;
@@ -22,4 +22,52 @@ body
 .margin3
 {
     margin-bottom: 1%;
+}
+.background-spe
+{
+    background-attachment: fixed;
+    background-origin: content-box;
+    background-clip: content-box;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image :url(IMG_une.jpg);
+}
+.navbar
+{
+    min-height: 50px;
+}
+header
+{
+    margin-bottom: 50px;
+}
+.newsletter
+{
+    margin-top: 22%;
+    color: white;
+}
+.margin {
+    margin-bottom: 5px;
+}
+
+
+
+.marginco {
+    margin-bottom: 95%;
+}
+
+.recette {
+    list-style-type: none;
+}
+
+.rec {
+    background-color: #222222;
+    color: white;
+    border-radius: 25px;
+}
+
+.bggrey {
+    background-color: #222222;
+    padding: 20px;
+    color: white;
 }
